--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </section>
 
     <section class="footer"> 
-        <h4>About Us</h4>
+        <h4>About </h4>
         <p>We choose not to be silent and we choose to be the way we want.</p>
         
         <div class="icons">
