--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             <div class="about-col">
                 <h1>JU is the reason why even at the saddest part of our life, we smile.</h1>
                 <p>Whenever this mind is stuck amidst the routine of classrooms and workshops, you came and painted our yard with flowers, like the spring after a long and cold winter. We march forward each day, through the streets, fists raised with our slogans filling up the air, in the end our hearts still yearn for you. In our sleepless minds, we await you, like a vigilant guard, to bring the message to redefine our culture. You are our most awaited, "Sanskriti".</p>
-                <a href="" class="hero add">Explore </a>
+                <a href="" class="hero add">Explore Now </a>
             </div>
             <div class="about-col">
             <img src="campus.jpg">
