--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,10 @@
 
     <section class="footer"> 
         <h4>About Us</h4>
-        
+        <p class="footer-col">
+            Copyright&copy;2023 All rights reserved | Made by
+            <span>Abhijit ❤️</span>
+          </p>
         
         <div class="icons">
             <i class="fa-brands fa-twitter"></i>
