--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-       <h1>JU in full festive </h1>
+       <h1>JU in full festive mood</h1>
     </section>
 
 
