--- a/course.html
+++ b/course.html
@@ -66,7 +66,7 @@
                     journals provide sitting accommodation for 700 readers.There is a separate libary for salt lake campus.</p>
                 </div>
                 <div class="facilities-col">
-                    <img src="ground.jpg"> 
+                    <img src="playground.jpg"> 
                     <h3>Largest Play Ground</h3>
                     <p>Discover a playground paradise with us!</p>
                 
