--- a/course.html
+++ b/course.html
@@ -37,16 +37,25 @@
 
         <div class="row">
             <div class="course-col">
-                <h3>Intermediate</h3>
-                <p>Jadavpur University is semi-residential, which at present operates out of two urban campuses: one in Jadavpur (58 acres (230,000 m2)) and another in Salt Lake (26 acres (110,000 m2)).</p>
+                <h3>PHD Courses</h3>
+                <p>Jadavpur University offers a range of PhD courses across various disciplines to help students further their
+                    academic and research pursuits. Our PhD programs are designed to provide students with rigorous
+                     training and advanced knowledge in their chosen field, preparing them for successful careers in academia
+                      or industry.</p>
             </div>
             <div class="course-col">
                 <h3>Degree</h3>
-                <p>Jadavpur University is semi-residential, which at present operates out of two urban campuses: one in Jadavpur (58 acres (230,000 m2)) and another in Salt Lake (26 acres (110,000 m2)).</p>
+                <p>Jadavpur University courses are BA,BSc,BCom,BTech, B.Pharma, B.Arch and BP.Ed.
+                    Student may also check: Jadavpur University Admission Details Jadavpur University
+                     Latest News Jadavpur University Distance Education Get detailed information about Jadavpur University's
+                      latest Fee structure 2023-24.</p>
             </div>
             <div class="course-col">
                 <h3>Post Graduation</h3>
-                <p>Jadavpur University is semi-residential, which at present operates out of two urban campuses: one in Jadavpur (58 acres (230,000 m2)) and another in Salt Lake (26 acres (110,000 m2)).</p>
+                <p>Jadavpur University courses are MA,MSc,MCom, MTech, B.Pharma, B.Arch. 
+                    Student may also check: Jadavpur University Admission Details Jadavpur University 
+                    Latest News Jadavpur University Distance Education Get detailed information about Jadavpur University's
+                     latest Fee structure 2023-24.</p>
             </div>
         </div>
     </section>
