--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                     <i class="fa fa-envelope-o"></i>
                     <span>
                         <h5>http://www.jaduniv.edu.in/</h5>
-                        <p>Email us your query</p>
+                        <p>Email us your quer</p>
                     </span>
                 </div>
             </div>
