--- a/index.html
+++ b/index.html
@@ -177,13 +177,14 @@
             <span>Abhijit ❤️</span>
           </p>                   
         
-        <div class="icons">
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-youtube"></i>
-        </div>
+       <div class="icons">
+            <a href="https://linkedin.com/in/abhijit-pal-35813a243"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://instagram.com/subujpaul2003"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100043790742663"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://github.com/abhijit-hash"><i class="fa-brands fa-github"></i></a>
+            <a href="https://discord.gg/qbMjRKWD"><i class="fa-brands fa-discord"></i></a>
+          </div>
+
 
     </section>
 
