--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <a href="https://instagram.com/subujpaul2003"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://www.facebook.com/profile.php?id=100043790742663"><i class="fa-brands fa-facebook"></i></a>
             <a href="https://github.com/abhijit-hash"><i class="fa-brands fa-github"></i></a>
-            <a href="https://discord.gg/qbMjRKWD"><i class="fa-brands fa-discord"></i></a>
+            <a href="https://discord.gg/dfznSQbkSK"><i class="fa-brands fa-discord"></i></a>
           </div>
 
 
